# data-engineering-utils

./: .gitignore  pyproject.toml
src/data_engineering_utils/connector/: base.py  database.py  file.py  restapi.py
src/data_engineering_utils/generator/: synthetic.py
src/data_engineering_utils/transformer/: text.py
