[tool.poetry]
name = "data-engineering-utils"
version = "0.1.0"
description = "Utility package for data engineers"
authors = ["Stefan Haan <stefanhaannl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
poetry-core = "^2.1.3"
polars = "^1.31.0"
adbc-driver-postgresql = "^1.6.0"
pyarrow = "^20.0.0"
notebook = "^7.4.3"
faker = "^37.4.0"
sqlalchemy = "^2.0.44"
pyodbc = "^5.3.0"
pandas = "^2.3.3"
trino = "^0.336.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
